<resources>
    <string name="app_name">Elecard</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="flashcard_app">Flashcard App</string>
    <string name="nickname">Nickname</string>
    <string name="add_new_card_set">Add new card set</string>
    <string name="edit_card_set_name">Edit card set name</string>
    <string name="card_set_name">Card Set name</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="confirm">CONFIRM</string>
</resources>