<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Elecard"
        android:textColor="@color/fortext"
        android:gravity="center_horizontal"
        android:fontFamily="@font/glacialindifference"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLoginLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:hint="@string/email_address"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_inp_email"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/glacialindifference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#757575"
            android:textSize="20sp"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:endIconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"

        app:layout_constraintTop_toBottomOf="@+id/emailLoginLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_inp_password"
            android:layout_width="match_parent"
            android:fontFamily="@font/glacialindifference"
            android:textSize="20sp"
            android:textColor="#757575"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="#eda1ab"
        android:textColor="@color/fortext"
        android:fontFamily="@font/glacialindifference"
        android:layout_marginTop="30dp"
        android:onClick="onClick"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

    <TextView
        android:id="@+id/main_forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/glacialindifference"
        android:onClick="onClick"
        android:text="@string/forgot_password"
        android:textColor="@color/fortext"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/main_login"
        app:layout_constraintTop_toBottomOf="@+id/main_login"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/main_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/glacialindifference"
        android:text="@string/register"
        android:textColor="@color/fortext"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_login"
        app:layout_constraintTop_toBottomOf="@+id/main_login"
        app:layout_constraintVertical_bias="0.006" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="@color/fortext"
        android:fontFamily="@font/opensanslight"
        android:text="Your long-term friend"
        android:textStyle="italic"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ProgressBar
        android:id="@+id/main_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/elecard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
         />

</androidx.constraintlayout.widget.ConstraintLayout>